--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.1.2",
     "bcrypt": "^5.0.1",
+    "cheerio": "^1.0.0-rc.12",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
